Fix issue with social bar rendering too wide

--- a/custom.css
+++ b/custom.css
@@ -178,7 +178,7 @@ div.abstract p {
    top: 72px;
    left: 50%;
    margin-left: -382.5px;
-   width: 100%;
+   width: 765px;
 }
 
 #social h2 {
